platform/observability/kube-prometheus-stack/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
spec:
  defaultBackend:
    service:
      name: kube-prometheus-stack-prometheus
      port:
        number: 9090
  ingressClassName: tailscale
  tls:
    - hosts:
        - prometheus
